--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,8 @@ package:
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: 5b2a7e09a2769dabe5c033490ce92fbb6dfb51cbe7aadaf1edf4749d9a91e67d
+  patches:
+    - no-cxx20.patch
 
 build:
   number: 1
