Pin libopencv to minor versions
OpenCV's SONAMEs include minor versions.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,7 +33,7 @@ requirements:
     - pynetworktables
     - python
     - {{ pin_compatible('numpy') }}
-    - {{ pin_compatible('libopencv') }}
+    - {{ pin_compatible('libopencv', max_pin='x.x') }}
     - {{ pin_compatible('py-opencv') }}
 
 test:
